Add fulfillment SKUs article
* Add article for fulfillment sku functionality
* Fix timestamp on fulfillment tokens index page

No changelog

Closes #94

--- a/admin/app/views/workarea/admin/fulfillment_tokens/index.html.haml
+++ b/admin/app/views/workarea/admin/fulfillment_tokens/index.html.haml
@@ -60,7 +60,7 @@
                   = form_tag fulfillment_sku_token_path(@sku, token), method: 'patch', class: 'text-button text-button--update' do
                     = hidden_field_tag 'return_to', request.url
                     = toggle_button_for 'token[enabled]', token.enabled?, id: token.id, data: { form_submitting_control: '' }
-                %td.align-right= local_time_ago(token.updated_at)
+                %td.align-right= local_time_ago(token.created_at)
 
         - if @tokens.total_pages > 1
           = render 'workarea/admin/shared/pagination', collection: @tokens
