--- a/admin/app/views/workarea/admin/pricing_discounts/properties/_buy_some_get_some.html.haml
+++ b/admin/app/views/workarea/admin/pricing_discounts/properties/_buy_some_get_some.html.haml
@@ -32,6 +32,7 @@
     %span.discount__node= select_tag 'condition_options', options_for_select(@discount.condition_options, @discount.selected_condition_option), title: 'When to Apply Discount', data: { discount_options_menu: { type: 'condition' }.to_json }
   = render 'workarea/admin/pricing_discounts/conditions/order_total', discount: @discount
   = render 'workarea/admin/pricing_discounts/conditions/user_tags', discount: @discount
+  = render 'workarea/admin/pricing_discounts/conditions/segments', discount: @discount
   = append_partials('admin.discount_conditions', discount: @discount)
   %p.discount__node-group
     %span.discount__node applied
