Add segmented icons to index pages

--- a/admin/app/views/workarea/admin/catalog_products/index.html.haml
+++ b/admin/app/views/workarea/admin/catalog_products/index.html.haml
@@ -72,6 +72,7 @@
                 = comments_icon_for(result)
                 = top_icon_for(result)
                 = trending_icon_for(result)
+                = segments_icon_for(result)
               %td.align-center= result.id
               %td= result.template.humanize
               %td.align-center
