--- a/admin/app/views/workarea/admin/catalog_categories/index.html.haml
+++ b/admin/app/views/workarea/admin/catalog_categories/index.html.haml
@@ -63,6 +63,7 @@
                 = upcoming_changesets_icon_for(result)
                 = comments_icon_for(result)
                 = top_icon_for(result)
+                = segments_icon_for(result)
               %td
                 - if result.breadcrumbs.blank?
                   %em= t('workarea.admin.fields.no_taxonomy')
