--- a/admin/app/views/workarea/admin/pricing_discounts/index.html.haml
+++ b/admin/app/views/workarea/admin/pricing_discounts/index.html.haml
@@ -63,6 +63,7 @@
                 = upcoming_changesets_icon_for(result)
                 = comments_icon_for(result)
                 = top_icon_for(result)
+                = segments_icon_for(result)
               %td= result.slug.titleize
               %td.align-center= t("workarea.admin.#{result.single_use?}")
               %td.align-center= t("workarea.admin.#{result.allow_sale_items?}")
