Implement Tribute.js for comment notifications
WORKAREA-6

--- a/admin/app/assets/javascripts/workarea/admin/application.js.erb
+++ b/admin/app/assets/javascripts/workarea/admin/application.js.erb
@@ -40,6 +40,7 @@ window.feature.testAll();
     spectrum
     Chart.bundle
     chartkick
+    tribute
   ).each do |asset|
     require_asset asset
   end
@@ -200,6 +201,7 @@ window.feature.testAll();
     workarea/admin/modules/active_by_segment_tooltips
     workarea/admin/modules/toggle_elements
     workarea/admin/modules/selects
+    workarea/admin/modules/tribute_areas
   ).each do |asset|
     require_asset asset
   end
