--- a/admin/app/assets/javascripts/workarea/admin/config.js.erb
+++ b/admin/app/assets/javascripts/workarea/admin/config.js.erb
@@ -23,6 +23,7 @@
      * @property {object} directUploads
      * @property {object} expandable
      * @property {object} timelineReportChart
+     * @property {object} tributeAreas
      */
 
     WORKAREA.config.datetimepickerFields = {
@@ -761,6 +762,10 @@
                 ]
             }
         }
+    };
+
+    WORKAREA.config.tributeAreas = {
+        trigger: '@'
     };
 
 
