--- a/admin/app/assets/stylesheets/workarea/admin/application.scss.erb
+++ b/admin/app/assets/stylesheets/workarea/admin/application.scss.erb
@@ -64,6 +64,7 @@
 @import 'jquery_ui/admin/ui_sortable';
 @import 'turbolinks/admin/progress_bar';
 @import 'spectrum';
+@import 'tribute/index';
 <%= append_stylesheets('admin.dependencies') %>
 
 @import 'workarea/admin/components/asset_picker_field';
