Clean up Segment Rules UI
No changelog

WORKAREA-9

--- a/admin/app/assets/stylesheets/workarea/admin/components/_box.scss
+++ b/admin/app/assets/stylesheets/workarea/admin/components/_box.scss
@@ -24,7 +24,9 @@ $box-rounded-border-radius:  $global-border-radius !default;
     border-radius: $box-rounded-border-radius;
 }
 
-.box--no-padding {}
+.box--padded {
+    padding: $spacing-unit;
+}
 
 
     .box__head {
