--- a/admin/app/views/workarea/admin/segment_rules/fields/_last_order.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/fields/_last_order.html.haml
@@ -1,3 +1,3 @@
-%span Ordered within
+%span Ordered in the last
 = number_field_tag 'rule[days]', rule.days.presence || Workarea.config.loyal_customers_last_order_days_ago, class: 'text-box text-box--small'
-%span days ago
+%span days
