--- a/admin/app/views/workarea/admin/segment_rules/fields/_tags.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/fields/_tags.html.haml
@@ -1,3 +1,4 @@
-%span They are tagged with any of
-= text_field_tag 'rule[tag_list]', rule.tag_list, class: 'text-box'
-%span.property__note= t('workarea.admin.segment_rules.tags_note')
+.property
+  = label_tag 'rule_locations', 'Customer tags', class: 'property__name'
+  = text_field_tag 'rule[tag_list]', rule.tag_list, class: 'text-box text-box--wide'
+  %span.property__note= t('workarea.admin.segment_rules.tags_note')
