--- a/admin/app/views/workarea/admin/segment_rules/summaries/_tags.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/summaries/_tags.html.haml
@@ -1,1 +1,2 @@
-%span= t('workarea.admin.segment_rules.summaries.tags.description_html', tags: rule.tags.join(', '))
+%span.text.text--large
+  = t('workarea.admin.segment_rules.summaries.tags.description_html', tags: rule.tags.join(', '))
