--- a/admin/app/views/workarea/admin/segment_rules/summaries/_traffic_referrer.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/summaries/_traffic_referrer.html.haml
@@ -1,8 +1,10 @@
 - if rule.medium.present?
-  %span #{t('workarea.admin.fields.medium')}:
-  %strong= rule.medium.titleize
-  ,
+  %span.text.text--large
+    %span #{t('workarea.admin.fields.medium')}:
+    %strong= rule.medium.titleize
+    ,
 
 - if rule.source.present?
-  %span #{t('workarea.admin.fields.source')}:
-  %strong= rule.source
+  %span.text.text--large
+    %span #{t('workarea.admin.fields.source')}:
+    %strong= rule.source
