--- a/admin/app/views/workarea/admin/segment_rules/fields/_orders.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/fields/_orders.html.haml
@@ -1,3 +1,4 @@
+%span From
 = number_field_tag 'rule[minimum]', rule.minimum, class: 'text-box text-box--small'
 %span to
 = number_field_tag 'rule[maximum]', rule.maximum, class: 'text-box text-box--small'
