--- a/admin/app/views/workarea/admin/segment_rules/fields/_revenue.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/fields/_revenue.html.haml
@@ -1,5 +1,9 @@
-%span= Money.default_currency.symbol
+%span
+  From
+  = Money.default_currency.symbol
 = number_field_tag 'rule[minimum]', rule.minimum, class: 'text-box text-box--small'
-%span to #{Money.default_currency.symbol}
+%span
+  To
+  = Money.default_currency.symbol
 = number_field_tag 'rule[maximum]', rule.maximum, class: 'text-box text-box--small'
 %span in revenue
