--- a/admin/app/views/workarea/admin/segment_rules/summaries/_geolocation.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/summaries/_geolocation.html.haml
@@ -1,1 +1,2 @@
-%span= t('workarea.admin.segment_rules.summaries.geolocation.description_html', locations: selected_segment_location_options(rule.locations).map { |o| %("#{o.first}") }.join(', '))
+%span.text.text--large
+  = t('workarea.admin.segment_rules.summaries.geolocation.description_html', locations: selected_segment_location_options(rule.locations).map { |o| %("#{o.first}") }.join(', '))
