--- a/admin/app/views/workarea/admin/segment_rules/summaries/_last_order.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/summaries/_last_order.html.haml
@@ -1,1 +1,2 @@
-%span= t('workarea.admin.segment_rules.summaries.last_order.description_html', count: rule.days)
+%span.text.text--large
+  = t('workarea.admin.segment_rules.summaries.last_order.description_html', count: rule.days)
