--- a/admin/app/views/workarea/admin/segment_rules/summaries/_logged_in.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/summaries/_logged_in.html.haml
@@ -1,4 +1,4 @@
-%span
+%span.text.text--large
   - if rule.logged_in?
     = t('workarea.admin.segment_rules.summaries.logged_in.logged_in_html')
   - else
