--- a/admin/app/views/workarea/admin/segment_rules/summaries/_revenue.html.haml
+++ b/admin/app/views/workarea/admin/segment_rules/summaries/_revenue.html.haml
@@ -1,4 +1,4 @@
-%span
+%span.text.text--large
   - minimum = rule.minimum.presence || 0
   - if minimum == rule.maximum
     = t('workarea.admin.segment_rules.summaries.revenue.single_value_description_html', amount: number_to_currency(minimum))
