--- a/admin/app/views/workarea/admin/catalog_categories/_cards.html.haml
+++ b/admin/app/views/workarea/admin/catalog_categories/_cards.html.haml
@@ -38,7 +38,8 @@
 
   .grid__cell
     .card{ class: card_classes(:featured_products, local_assigns[:active]) }
-      = link_to select_featured_product_path(model.to_global_id), class: 'card__header' do
+      - link_path = model.featured_products.any? ? edit_featured_product_path(model.to_global_id) : select_featured_product_path(model.to_global_id)
+      = link_to link_path, class: 'card__header' do
         %span.card__header-text= t('workarea.admin.catalog_categories.cards.featured_products.title')
         = inline_svg 'workarea/admin/icons/featured_products.svg', class: 'card__icon'
 
