--- a/storefront/app/views/layouts/workarea/storefront/empty.html.haml
+++ b/storefront/app/views/layouts/workarea/storefront/empty.html.haml
@@ -4,6 +4,7 @@
 - if @content.present?
   - add_css(@content.css)
   - add_javascript(@content.javascript)
+  - add_head_content(@content.head_content)
 
 !!!
 /
