--- a/storefront/app/views/workarea/storefront/content_areas/show.html.haml
+++ b/storefront/app/views/workarea/storefront/content_areas/show.html.haml
@@ -1,6 +1,7 @@
 - @title = @content.browser_title
 - add_css(@content.css)
 - add_javascript(@content.javascript)
+- add_head_content(@content.head_content)
 
 .view
   = render_content_blocks(@content.content_blocks_for(@area_id))
