--- a/admin/app/views/workarea/admin/comments/index.html.haml
+++ b/admin/app/views/workarea/admin/comments/index.html.haml
@@ -42,6 +42,17 @@
               %p= comment.body
 
       .section
+        - if @commentable.subscribed_user_ids.include?(current_user.id.to_s)
+          = form_tag unsubscribe_commentable_comments_path(@commentable.to_global_id), method: :put, id: 'comment_unsubscribe_form' do
+            = button_tag t('workarea.admin.comments.index.unsubscribe'), value: 'comments_unsubscribe', class: 'button button--small'
+            %span= t('workarea.admin.comments.index.subscribe_message')
+        - else
+          = form_tag subscribe_commentable_comments_path(@commentable.to_global_id), method: :put, id: 'comment_unsubscribe_form' do
+            = button_tag t('workarea.admin.comments.index.subscribe'), value: 'comments_subscribe', class: 'button button--small'
+            %span= t('workarea.admin.comments.index.unsubscribe_message')
+
+
+      .section
         .comments__new-comment
           %h2= t('workarea.admin.comments.index.new')
           - if @comment.errors.present?
@@ -53,10 +64,6 @@
               = label_tag 'comment[body]', t('workarea.admin.fields.body'), class: 'property__name'
               = text_area_tag 'comment[body]', @comment.body, class: 'text-box text-box--multi-line', required: true, data: { tribute_area: users_path(exclude_current_user: true, format: :json) }
               %span.property__note= t('workarea.admin.comments.index.mention_note')
-
-              - if @commentable.subscribed_users.any?
-                %strong= t('workarea.admin.comments.index.users_currently_subscribed')
-                = @commentable.subscribed_users.map(&:email).to_sentence
 
             .workflow-bar
               .grid.grid--auto.grid--right.grid--middle
