Don't warn admins about impersonation when selecting segments
No changelog

--- a/admin/app/assets/javascripts/workarea/admin/config.js.erb
+++ b/admin/app/assets/javascripts/workarea/admin/config.js.erb
@@ -677,7 +677,8 @@
 
     WORKAREA.config.impersonationNotification = {
         excludedPaths: [
-            'pricing_overrides'
+            'pricing_overrides',
+            'segment_override'
         ]
     };
 
