Add admin browsing by segmentable content
This adds "Active by Segment" as a filter, and adds a "Content" card to
segments to surface what stuff has been setup specifically for a
segment.

WORKAREA-89

--- a/admin/app/views/workarea/admin/content/_card.html.haml
+++ b/admin/app/views/workarea/admin/content/_card.html.haml
@@ -15,6 +15,9 @@
             %li.content-block-list__item
               = content_block_icon(block.icon, title: block.name, class: 'content-block-list__icon')
               %span.content-block-list__name= block.name
+              - if block.segments.any?
+                %span.content-block-list__segments
+                  = inline_svg('workarea/admin/icons/user.svg', class: 'svg-icon svg-icon--small svg-icon--blue')
 
           - if content.blocks.length > 5
             %li.content-block-list__item.align-center
