--- a/admin/app/views/workarea/admin/catalog_products/_cards.html.haml
+++ b/admin/app/views/workarea/admin/catalog_products/_cards.html.haml
@@ -14,6 +14,7 @@
             %li
               %strong= t('workarea.admin.fields.active')
               = check_box_tag 'product', 'active', model.active?, disabled: true
+              = inline_svg('workarea/admin/icons/user.svg', class: 'svg-icon svg-icon--small svg-icon--blue') if model.active? && model.segments.any?
             %li
               %strong= t('workarea.admin.fields.template')
               = model.template.try(:titleize)
