--- a/admin/app/views/workarea/admin/content_pages/_cards.html.haml
+++ b/admin/app/views/workarea/admin/content_pages/_cards.html.haml
@@ -11,6 +11,7 @@
             %li
               %strong= t('workarea.admin.fields.active')
               = check_box_tag 'page', 'active', model.active, disabled: true
+              = inline_svg('workarea/admin/icons/user.svg', class: 'svg-icon svg-icon--small svg-icon--blue') if model.active? && model.segments.any?
             %li
               %strong= t('workarea.admin.fields.show_left_navigation')
               = model.show_navigation?.to_s.titleize
